Closed Bug 43679 Opened 26 years ago Closed 26 years ago

lose sender when scrolling in the addressing pane

Categories

(MailNews Core :: Composition, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: esther, Assigned: kinmoz)

References

Details

(Keywords: regression, Whiteboard: [dogfood+] depend on 43575)

From Bugzilla Helper: User-Agent: Mozilla/4.73 [en]C-NSCP (Win98; U) BuildID: 2000-06-23 lose sender when scrolling in the addressing pane Reproducible: Always Steps to Reproduce: 1.launch messanger 2.click new meeasge 3.type a name in the to field then, press enter type a second name in the to field, then press enter 4. scroll up and down with the scroll bar Actual Results: the first name is missing and the massage does not get sent to that person when sending Expected Results: you should see both names bug logged by: Luis Rincon
Putting on dogfood+ radar! Need fix ASAP please!!!
Keywords: dogfood
Summary: lose sender when scrolling in the addressing pane → lose sender when scrolling in the addressing pane
Whiteboard: [dogfood+]
*** Bug 43878 has been marked as a duplicate of this bug. ***
it's another side effect of bug 43575. I have a build from today on which one I have back out Rods' changed to nsGfxTextControlFrame2.cpp/h and I don't see this problem anymore.
Status: NEW → ASSIGNED
Depends on: 43575
Whiteboard: [dogfood+] → [dogfood+] depend on 43575
Target Milestone: --- → M17
yikes! I'm also seeing: if you collapse the addressing toolbar and reopen it, it loses the contents. It sounds related so I'm adding a comment to this bug.
Asa, please file a new bug for the collapse problem as it wont be fixed by the fix for bug 43575. Thanks
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Since Luis logged this bug, I'll let him verify on Win32 and Mac. I'll check linux build, since I don't think he uses Linux yet.
QA Contact: lchiang → luis
This looks OK using 2000-06-27-09 linux rh6.0. Also, logged bug for collapse/expand address block case as bug #43992.
thanks laurel. I can verify this on Mac too 062808 OS 9
i verified it and it works im using build 2000-06-09m17
build 2000-06-27-09m7
Luis' verification was done using Win98. Also OK using 2000-06-28 m17 commercial buld mac os 9.0
Status: RESOLVED → VERIFIED
This is back using jun30 commercial build on linux rh6.0, mac OS 9.0 and NT 4.0 REGRESSION!
Status: VERIFIED → REOPENED
Keywords: regression
QA Contact: luis → laurel
Resolution: FIXED → ---
*** Bug 44394 has been marked as a duplicate of this bug. ***
Accepting again...
Status: REOPENED → ASSIGNED
Priority: P3 → P1
I can confirm that this is back with the 2000070508 Mozilla build on NT
This problem doesn't occurs with a Commercial NT build from 2000061920
...therefore, the regression appears between June 19th 8pm(20:00) and June 20th 8am
Linux (2000-07-05-08 M17) This problem also occurs in Linux's build.
This was my fault. I checked in a fix to mozilla/layout/html/forms/src/nsGfxTextControlFrame2.cpp revision 1.51 Modified CreateAnonymousContent() to use mCachedState if it exists. r=ducarroz@netscape.com
Assignee: ducarroz → kin
Status: ASSIGNED → NEW
Marking fixed.
Status: NEW → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
OK using jul6 commercial build with NT 4.0, linux rh6.0 and mac OS 9.0. Marking verified, hopefully for the last time.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.