Fix for bug #43679: lose sender when scrolling in the addressing pane Modified CreateAnonymousContent() to use mCachedState if it exists.

r=ducarroz@netscape.com